--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
       steps {
         echo 'Deploying only because of code commit...'
         echo 'Deploying to  dev environent....'
-        bat 'mvn clean deploy -DmuleDeploy' 
+        bat 'mvn clean package deploy -Psandbox -DmuleDeploy' 
       }
 	  
 	}
