--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 					<cloudhub2Deployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<provider>MC</provider>
-						<environment>SANDBOX</environment>
+						<environment>Sandbox</environment>
 						<target>afm-ps</target>
 						<muleVersion>4.4.0</muleVersion>
 						<username>sonalpatidar30Dec</username>
