--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,8 +21,8 @@ pipeline {
             
       steps {
         echo 'Deploying only because of code commit...'
-        echo 'Deploying to  dev environent....'
-        bat 'mvn package deploy -DmuleDeploy' 
+        echo 'Deploying to  dev environment....'
+        bat 'mvn -X package deploy -DmuleDeploy' 
       }
 	  
 	}
