--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
     }
  	
    
-	stage('Deploy CloudHub2.0') { 
+	stage('Deploy CloudHub') { 
       environment {
         ANYPOINT_CREDENTIALS = credentials('anypoint.credentials')
       }
@@ -22,7 +22,7 @@ pipeline {
       steps {
         echo 'Deploying only because of code commit...'
         echo 'Deploying to  dev environment....'
-        bat 'mvn -X package deploy -DmuleDeploy' 
+        bat 'mvn package deploy -DmuleDeploy -DworkerType=Micro -Dworkers=1 -Dregion=us-west-2'
       }
 	  
 	}
