--- a/pom.xml
+++ b/pom.xml
@@ -30,27 +30,18 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<cloudhub2Deployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<provider>MC</provider>
-						<environment>Sandbox</environment>
-						<target>afm-ps</target>
-						<muleVersion>4.4.0</muleVersion>
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com/</uri>
+						<muleVersion>${app.runtime}</muleVersion>
 						<username>sonalpatidar30Dec</username>
 						<password>SonalMule@123</password>
 						<applicationName>7oct-emp-sapi</applicationName>
-						<replicas>1</replicas>
-						<vCores>1</vCores>
-						<deploymentSettings>
-							<http>
-								<inbound>
-									<publicUrl>myapp.anypoint.com</publicUrl>
-									<forwardSslSession>true</forwardSslSession>
-									<lastMileSecurity>true</lastMileSecurity>
-								</inbound>
-							</http>
-						</deploymentSettings>
-					</cloudhub2Deployment>
+						<environment>Sandbox</environment>
+						<workerType>${workerType}</workerType>
+						<workers>1</workers>
+						<objectStoreV2>true</objectStoreV2>
+						<!-- 	<region> ${region} </region> -->
+					</cloudHubDeployment>
 				</configuration>
 			</plugin>
 		</plugins>
